--- a/reader.html
+++ b/reader.html
@@ -1,21 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<head>
+  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Reader — Classy Femininity</title>
   <style>
-    /* …your existing CSS for loader, paywall, nav… */
+    /* ---------- Base ---------- */
+    * { box-sizing:border-box; margin:0; padding:0; }
+    html, body { height:100%; width:100%; font-family:sans-serif; }
+
+    /* Loader overlay */
+    #loader {
+      position:fixed; top:0; left:0; right:0; bottom:0;
+      background:rgba(255,255,255,0.95);
+      display:flex; align-items:center; justify-content:center;
+      z-index:1000;
+    }
+    .spinner {
+      border:6px solid #eee;
+      border-top:6px solid #b20235;
+      border-radius:50%;
+      width:48px; height:48px;
+      animation:spin 1s linear infinite;
+    }
+    @keyframes spin { to { transform:rotate(360deg); } }
+
+    /* Paywall overlay */
+    #paywall {
+      position:fixed; top:0; left:0; right:0; bottom:0;
+      background:rgba(0,0,0,0.85);
+      color:#fff;
+      display:none;
+      flex-direction:column;
+      align-items:center;
+      justify-content:center;
+      text-align:center;
+      padding:24px;
+      z-index:1001;
+    }
+    #paywall button {
+      margin:12px 6px;
+      padding:10px 20px;
+      background:#b20235;
+      color:#fff;
+      border:none;
+      border-radius:4px;
+      cursor:pointer;
+      font-size:1rem;
+    }
+
+    /* PDF canvas */
+    #canvas { display:block; width:100%; }
+
+    /* Prev/Next nav */
+    .nav {
+      position:fixed; bottom:16px; left:50%;
+      transform:translateX(-50%);
+      background:rgba(255,255,255,0.9);
+      padding:8px 16px; border-radius:6px;
+      box-shadow:0 2px 4px rgba(0,0,0,0.1);
+      z-index:500; display:flex; align-items:center;
+    }
+    .nav button {
+      margin:0 8px; padding:6px 12px;
+      background:#b20235; color:#fff;
+      border:none; border-radius:4px; cursor:pointer;
+    }
+    .nav span { font-size:1rem; margin:0 4px; }
+
+    /* Error */
+    .error {
+      padding:24px; text-align:center;
+      color:red; font-family:sans-serif;
+    }
   </style>
+
+  <!-- PDF.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
+  <!-- Paddle v2 overlay -->
   <script src="https://cdn.paddle.com/paddle/v2/paddle.js"></script>
 </head>
 <body>
+  <!-- Loader -->
   <div id="loader"><div class="spinner"></div></div>
+
+  <!-- Paywall -->
   <div id="paywall">
-    <p>Free preview (5 pages).<br/>Subscribe to continue.</p>
+    <p>You’ve reached your free preview (5 pages).<br/>Subscribe to continue reading.</p>
     <button id="monthly-btn">Subscribe Monthly</button>
     <button id="yearly-btn">Subscribe Yearly</button>
   </div>
+
+  <!-- PDF canvas -->
   <canvas id="canvas"></canvas>
+
+  <!-- Prev/Next nav -->
   <div class="nav">
     <button id="prev">◀ Prev</button>
     <span id="page-num">1</span> / <span id="page-count">?</span>
@@ -24,91 +102,108 @@
 
   <script>
   window.addEventListener('load', () => {
-    // ——— PADDLE Initialization ———
-    const PADDLE_VENDOR_ID    = 31791;               // ← your Seller ID
-    const PADDLE_CLIENT_TOKEN = 'test_c1d926aee93e8ff9dbd35392581';   // ← your client-side token
-    const PADDLE_MONTHLY_ID   = 'pri_01jvthzpme46yzb6g6b7er4jnk';
-    const PADDLE_YEARLY_ID    = 'pri_01jvtj0dch0kb39g9rej1qexyg';
+    // ===== PADDLE CONFIG =====
+    // 1) Your client-side token from Paddle → Developer Tools → Authentication
+    const PADDLE_CLIENT_TOKEN = 'test_c1d926aee93e8ff9dbd35392581';    // e.g. 'pub_live_abc123...' or 'test_xyz456...'
 
-    Paddle.Environment.set('sandbox'); // or 'production'
-    Paddle.Initialize({
-      vendor: PADDLE_VENDOR_ID,
-      token:  PADDLE_CLIENT_TOKEN
-    });
+    // 2) Sandbox vs production
+    Paddle.Environment.set('sandbox');                       // switch to 'production' when live
 
+    // 3) Initialize ONLY with token
+    Paddle.Initialize({ token: PADDLE_CLIENT_TOKEN });
+
+    // 4) Your Price IDs
+    const PADDLE_MONTHLY_ID = 'pri_01jvthzpme46yzb6g6b7er4jnk';       // e.g. 'pri_XXXXXXXX'
+    const PADDLE_YEARLY_ID  = 'pri_01jvtj0dch0kb39g9rej1qexyg';        // e.g. 'pri_YYYYYYYY'
+
+    // 5) Success callback
     function onSubscribed() {
       localStorage.setItem('subscribed','true');
       document.getElementById('paywall').style.display = 'none';
       queueRenderPage(pageNum);
     }
 
+    // 6) Hook buttons
     document.getElementById('monthly-btn').onclick = () =>
-      Paddle.Checkout.open({ product: PADDLE_MONTHLY_ID, successCallback: onSubscribed });
-
+      Paddle.Checkout.open({
+        product:         PADDLE_MONTHLY_ID,
+        successCallback: onSubscribed
+      });
     document.getElementById('yearly-btn').onclick = () =>
-      Paddle.Checkout.open({ product: PADDLE_YEARLY_ID,  successCallback: onSubscribed });
-    // ————————————————————————————
+      Paddle.Checkout.open({
+        product:         PADDLE_YEARLY_ID,
+        successCallback: onSubscribed
+      });
+    // =======================
 
-    // ——— PDF.js + paywall logic ———
+    // ===== PDF.js SETUP =====
     pdfjsLib.GlobalWorkerOptions.workerSrc =
       'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js';
 
-    const params = new URLSearchParams(location.search),
-          bookId = params.get('book') || '1',
-          pdfUrl = `/ebooks/book-${bookId}.pdf`;
+    const params = new URLSearchParams(location.search);
+    const bookId = params.get('book') || '1';
+    const pdfUrl = `/ebooks/book-${bookId}.pdf`;
 
-    const loader  = document.getElementById('loader'),
-          paywall = document.getElementById('paywall');
+    const loader  = document.getElementById('loader');
+    const paywall = document.getElementById('paywall');
 
     function showLoader(on) { loader.style.display = on ? 'flex' : 'none'; }
 
+    // HEAD-check then load PDF
     fetch(pdfUrl, { method:'HEAD' })
-      .then(r => { if(!r.ok) throw new Error(r.status); return pdfjsLib.getDocument(pdfUrl).promise; })
-      .then(pdf => {
-        document.getElementById('page-count').textContent = pdf.numPages;
+      .then(r => { if (!r.ok) throw new Error(r.status); return pdfjsLib.getDocument(pdfUrl).promise; })
+      .then(pdfDoc => {
+        document.getElementById('page-count').textContent = pdfDoc.numPages;
         showLoader(false);
-        initializeViewer(pdf);
+        initializeViewer(pdfDoc);
       })
       .catch(err => {
-        console.error(err);
+        console.error('PDF load error:', err);
         showLoader(false);
         document.body.innerHTML = `<p class="error">Could not load PDF: ${err.message}</p>`;
       });
 
-    let pageNum=1, pageIsRendering=false, pageNumPending=null;
+    // Render + paywall logic
+    let pageNum = 1, pageIsRendering = false, pageNumPending = null;
     function initializeViewer(pdfDoc) {
       const canvasEl = document.getElementById('canvas'),
             ctx      = canvasEl.getContext('2d');
 
-      function renderPage(n) {
-        if(n>5 && localStorage.getItem('subscribed')!=='true'){
-          paywall.style.display='flex';
+      function renderPage(num) {
+        if (num > 5 && localStorage.getItem('subscribed') !== 'true') {
+          paywall.style.display = 'flex';
           return;
         }
-        paywall.style.display='none';
-        pageIsRendering=true;
-        pdfDoc.getPage(n).then(page => {
+        paywall.style.display = 'none';
+        pageIsRendering = true;
+        pdfDoc.getPage(num).then(page => {
           const vp = page.getViewport({ scale:1.5 });
-          canvasEl.height=vp.height; canvasEl.width=vp.width;
-          page.render({ canvasContext:ctx, viewport:vp }).promise.then(()=>{
-            pageIsRendering=false;
-            if(pageNumPending!==null){ renderPage(pageNumPending); pageNumPending=null; }
+          canvasEl.height = vp.height; canvasEl.width = vp.width;
+          page.render({ canvasContext: ctx, viewport: vp }).promise.then(() => {
+            pageIsRendering = false;
+            if (pageNumPending !== null) {
+              renderPage(pageNumPending);
+              pageNumPending = null;
+            }
           });
-          document.getElementById('page-num').textContent=n;
+          document.getElementById('page-num').textContent = num;
         });
       }
-      function queueRenderPage(n){
-        pageIsRendering? pageNumPending=n : renderPage(n);
+
+      function queueRenderPage(num) {
+        if (pageIsRendering) pageNumPending = num;
+        else renderPage(num);
       }
+
       document.getElementById('prev').onclick = () => {
-        if(pageNum>1){ pageNum--; queueRenderPage(pageNum); }
+        if (pageNum > 1) { pageNum--; queueRenderPage(pageNum); }
       };
       document.getElementById('next').onclick = () => {
-        if(pageNum < pdfDoc.numPages){ pageNum++; queueRenderPage(pageNum); }
+        if (pageNum < pdfDoc.numPages) { pageNum++; queueRenderPage(pageNum); }
       };
+
       renderPage(pageNum);
     }
-    // ——————————————————————
   });
   </script>
 </body>
