--- a/reader.html
+++ b/reader.html
@@ -1,76 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Reader — Classy Femininity</title>
   <style>
     /* ---------- Base ---------- */
-    * { box-sizing:border-box; margin:0; padding:0; }
-    html, body { height:100%; width:100%; font-family:sans-serif; }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    html, body { height: 100%; width: 100%; font-family: sans-serif; }
 
     /* Loader overlay */
     #loader {
-      position:fixed; top:0; left:0; right:0; bottom:0;
-      background:rgba(255,255,255,0.95);
-      display:flex; align-items:center; justify-content:center;
-      z-index:1000;
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(255,255,255,0.95);
+      display: flex; align-items: center; justify-content: center;
+      z-index: 1000;
     }
     .spinner {
-      border:6px solid #eee;
-      border-top:6px solid #b20235;
-      border-radius:50%;
-      width:48px; height:48px;
-      animation:spin 1s linear infinite;
+      border: 6px solid #eee;
+      border-top: 6px solid #b20235;
+      border-radius: 50%;
+      width: 48px; height: 48px;
+      animation: spin 1s linear infinite;
     }
-    @keyframes spin { to { transform:rotate(360deg); } }
+    @keyframes spin { to { transform: rotate(360deg); } }
 
     /* Paywall overlay */
     #paywall {
-      position:fixed; top:0; left:0; right:0; bottom:0;
-      background:rgba(0,0,0,0.85);
-      color:#fff;
-      display:none;
-      flex-direction:column;
-      align-items:center;
-      justify-content:center;
-      text-align:center;
-      padding:24px;
-      z-index:1001;
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,0.85);
+      color: #fff;
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      padding: 24px;
+      z-index: 1001;
     }
     #paywall button {
-      margin:12px 6px;
-      padding:10px 20px;
-      background:#b20235;
-      color:#fff;
-      border:none;
-      border-radius:4px;
-      cursor:pointer;
-      font-size:1rem;
+      margin: 12px 6px;
+      padding: 10px 20px;
+      background: #b20235;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 1rem;
     }
 
     /* PDF canvas */
-    #canvas { display:block; width:100%; }
+    #canvas {
+      display: block;
+      width: 100%;
+    }
 
     /* Prev/Next nav */
     .nav {
-      position:fixed; bottom:16px; left:50%;
-      transform:translateX(-50%);
-      background:rgba(255,255,255,0.9);
-      padding:8px 16px; border-radius:6px;
-      box-shadow:0 2px 4px rgba(0,0,0,0.1);
-      z-index:500; display:flex; align-items:center;
+      position: fixed;
+      bottom: 16px; left: 50%;
+      transform: translateX(-50%);
+      background: rgba(255,255,255,0.9);
+      padding: 8px 16px;
+      border-radius: 6px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      z-index: 500;
+      display: flex;
+      align-items: center;
     }
     .nav button {
-      margin:0 8px; padding:6px 12px;
-      background:#b20235; color:#fff;
-      border:none; border-radius:4px; cursor:pointer;
+      margin: 0 8px;
+      padding: 6px 12px;
+      background: #b20235;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
     }
-    .nav span { font-size:1rem; margin:0 4px; }
+    .nav span {
+      font-size: 1rem;
+      margin: 0 4px;
+    }
 
-    /* Error */
+    /* Error message */
     .error {
-      padding:24px; text-align:center;
-      color:red; font-family:sans-serif;
+      padding: 24px;
+      text-align: center;
+      color: red;
+      font-family: sans-serif;
     }
   </style>
 
@@ -102,41 +121,59 @@
 
   <script>
   window.addEventListener('load', () => {
-    // ===== PADDLE CONFIG =====
-    // 1) Your client-side token from Paddle → Developer Tools → Authentication
-    const PADDLE_CLIENT_TOKEN = 'test_c1d926aee93e8ff9dbd35392581';    // e.g. 'pub_live_abc123...' or 'test_xyz456...'
+    // ───── PADDLE OVERLAY SETUP ─────
+    // 1) Paste your full PGP Public Key here:
+    const PADDLE_PUBLIC_KEY = `-----BEGIN PGP PUBLIC KEY BLOCK-----
+MIICIjANBgkqhkiG9w0BAQEFAAOCAg8AMIICCgKCAgEArn0Uok8RFtUjqzvocCkr
+FIsrQ2EQgrH2lo5ZGZF2HqlLSbcyVyjzyhFtmgaqT1obIH7eH93IdibxmYNzynax
+BYeTL4IsSidGGpjepOOMEF7lMIzogK6GTcR7ihqsjdMOobjjXn04K5kv41YaQAfW
+CAcQfjnBBTtRqlYuU4kE3AEy5CbOd+zKcPt20Y+VHOHTmXXrTLyX4Jilw8jwr53f
+Hn06HzrEbh4vDFIJBh26UKfALnpAKXhQUy4wUC6+CvqRq7PqbO40SeYvIJjxXFIv
+KYaFpydd7P1anbz+rXVKjIWQ0EdGOjBOQ/Xy47sAdSe9Sk6Wzp9CT+g/j3ynWcCL
+UHropIFmSDzwHHlIF/lWtzXYZTaTQes4L0rudJ4Q62YWgSEoegdFbEf3ZWN9t87c
+KGjiU7SJo/05XNkKlbxXetAZ6ckALp0Ix3NrO/G4COD9egPeEk94UObUA1JIwpF8
+UiWLEklCNS0iteKPPBZ3fLxVk/voURFDSDsRH86pXKfmxB2VBwAH7TooK5LjQ2bt
++fwgfm4m8Drr6r4o/t+8LFF3Wue4OewCpyXMjmAnDhZqKb5ZAoL7WxL2VYtxbxRO
+xKSSwnymkl3WrlTBPsMC3Wc4/qf3vLv0zoUpnWZvT0QXjVvMUhqcNUce+LTj+20w
+krI5zTdAwHD0Cpg3OCulwosCAwEAAQ==
+-----END PGP PUBLIC KEY BLOCK-----`;
 
-    // 2) Sandbox vs production
-    Paddle.Environment.set('sandbox');                       // switch to 'production' when live
+    // 2) Sandbox for local testing; switch to 'production' when you go live
+    Paddle.Environment.set('sandbox');
 
-    // 3) Initialize ONLY with token
-    Paddle.Initialize({ token: PADDLE_CLIENT_TOKEN });
+    // 3) Initialize Paddle overlay with your public key
+    Paddle.Setup({
+      publicKey: PADDLE_PUBLIC_KEY,
+      env:       'sandbox'
+    });
 
-    // 4) Your Price IDs
-    const PADDLE_MONTHLY_ID = 'pri_01jvthzpme46yzb6g6b7er4jnk';       // e.g. 'pri_XXXXXXXX'
-    const PADDLE_YEARLY_ID  = 'pri_01jvtj0dch0kb39g9rej1qexyg';        // e.g. 'pri_YYYYYYYY'
+    // 4) Your Price IDs (copy from Paddle Dashboard → Catalog → Products → Prices)
+    const MONTHLY_ID = 'pri_01jvthzpme46yzb6g6b7er4jnk';
+    const YEARLY_ID  = 'pri_01jvtj0dch0kb39g9rej1qexyg';
 
-    // 5) Success callback
+    // 5) Success callback to unlock pages
     function onSubscribed() {
       localStorage.setItem('subscribed','true');
       document.getElementById('paywall').style.display = 'none';
       queueRenderPage(pageNum);
     }
 
-    // 6) Hook buttons
-    document.getElementById('monthly-btn').onclick = () =>
+    // 6) Wire up your Subscribe buttons
+    document.getElementById('monthly-btn').onclick = () => {
       Paddle.Checkout.open({
-        product:         PADDLE_MONTHLY_ID,
+        product:         MONTHLY_ID,
         successCallback: onSubscribed
       });
-    document.getElementById('yearly-btn').onclick = () =>
+    };
+    document.getElementById('yearly-btn').onclick = () => {
       Paddle.Checkout.open({
-        product:         PADDLE_YEARLY_ID,
+        product:         YEARLY_ID,
         successCallback: onSubscribed
       });
-    // =======================
+    };
+    // ────────────────────────────────────
 
-    // ===== PDF.js SETUP =====
+    // ───── PDF.js + PAYWALL LOGIC ─────
     pdfjsLib.GlobalWorkerOptions.workerSrc =
       'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js';
 
@@ -144,41 +181,54 @@
     const bookId = params.get('book') || '1';
     const pdfUrl = `/ebooks/book-${bookId}.pdf`;
 
-    const loader  = document.getElementById('loader');
-    const paywall = document.getElementById('paywall');
+    const loader   = document.getElementById('loader');
+    const paywall  = document.getElementById('paywall');
+    const canvas   = document.getElementById('canvas');
+    const ctx      = canvas.getContext('2d');
+    const prevBtn  = document.getElementById('prev');
+    const nextBtn  = document.getElementById('next');
+    const pageNumEl   = document.getElementById('page-num');
+    const pageCountEl = document.getElementById('page-count');
 
-    function showLoader(on) { loader.style.display = on ? 'flex' : 'none'; }
+    function showLoader(on) {
+      loader.style.display = on ? 'flex' : 'none';
+    }
 
-    // HEAD-check then load PDF
-    fetch(pdfUrl, { method:'HEAD' })
-      .then(r => { if (!r.ok) throw new Error(r.status); return pdfjsLib.getDocument(pdfUrl).promise; })
+    // 1) HEAD-check & load PDF
+    fetch(pdfUrl, { method: 'HEAD' })
+      .then(r => {
+        if (!r.ok) throw new Error(`HTTP ${r.status}`);
+        return pdfjsLib.getDocument(pdfUrl).promise;
+      })
       .then(pdfDoc => {
-        document.getElementById('page-count').textContent = pdfDoc.numPages;
+        pageCountEl.textContent = pdfDoc.numPages;
         showLoader(false);
         initializeViewer(pdfDoc);
       })
       .catch(err => {
         console.error('PDF load error:', err);
         showLoader(false);
-        document.body.innerHTML = `<p class="error">Could not load PDF: ${err.message}</p>`;
+        document.body.innerHTML = `<p class="error">
+          Could not load PDF (Book ${bookId}): ${err.message}
+        </p>`;
       });
 
-    // Render + paywall logic
+    // 2) Render + paywall
     let pageNum = 1, pageIsRendering = false, pageNumPending = null;
-    function initializeViewer(pdfDoc) {
-      const canvasEl = document.getElementById('canvas'),
-            ctx      = canvasEl.getContext('2d');
 
+    function initializeViewer(pdfDoc) {
       function renderPage(num) {
         if (num > 5 && localStorage.getItem('subscribed') !== 'true') {
           paywall.style.display = 'flex';
           return;
         }
         paywall.style.display = 'none';
+
         pageIsRendering = true;
         pdfDoc.getPage(num).then(page => {
-          const vp = page.getViewport({ scale:1.5 });
-          canvasEl.height = vp.height; canvasEl.width = vp.width;
+          const vp = page.getViewport({ scale: 1.5 });
+          canvas.height = vp.height;
+          canvas.width  = vp.width;
           page.render({ canvasContext: ctx, viewport: vp }).promise.then(() => {
             pageIsRendering = false;
             if (pageNumPending !== null) {
@@ -186,7 +236,7 @@
               pageNumPending = null;
             }
           });
-          document.getElementById('page-num').textContent = num;
+          pageNumEl.textContent = num;
         });
       }
 
@@ -195,15 +245,22 @@
         else renderPage(num);
       }
 
-      document.getElementById('prev').onclick = () => {
-        if (pageNum > 1) { pageNum--; queueRenderPage(pageNum); }
+      prevBtn.onclick = () => {
+        if (pageNum > 1) {
+          pageNum--;
+          queueRenderPage(pageNum);
+        }
       };
-      document.getElementById('next').onclick = () => {
-        if (pageNum < pdfDoc.numPages) { pageNum++; queueRenderPage(pageNum); }
+      nextBtn.onclick = () => {
+        if (pageNum < pdfDoc.numPages) {
+          pageNum++;
+          queueRenderPage(pageNum);
+        }
       };
 
       renderPage(pageNum);
     }
+    // ────────────────────────────────────
   });
   </script>
 </body>
