--- a/reader.html
+++ b/reader.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Reader — Classy Femininity</title>
   <style>
-    /* ---------- Base ---------- */
+      /* ---------- Base ---------- */
     * { box-sizing: border-box; margin: 0; padding: 0; }
     html, body { height: 100%; width: 100%; font-family: sans-serif; }
 
@@ -90,7 +89,7 @@
       text-align: center;
       color: red;
       font-family: sans-serif;
-    }
+    }  /* …your existing CSS for loader, paywall, nav… */
   </style>
 
   <!-- PDF.js -->
@@ -99,136 +98,92 @@
   <script src="https://cdn.paddle.com/paddle/v2/paddle.js"></script>
 </head>
 <body>
-  <!-- Loader -->
-  <div id="loader"><div class="spinner"></div></div>
-
-  <!-- Paywall -->
-  <div id="paywall">
-    <p>You’ve reached your free preview (5 pages).<br/>Subscribe to continue reading.</p>
-    <button id="monthly-btn">Subscribe Monthly</button>
-    <button id="yearly-btn">Subscribe Yearly</button>
-  </div>
-
-  <!-- PDF canvas -->
-  <canvas id="canvas"></canvas>
-
-  <!-- Prev/Next nav -->
-  <div class="nav">
-    <button id="prev">◀ Prev</button>
-    <span id="page-num">1</span> / <span id="page-count">?</span>
-    <button id="next">Next ▶</button>
-  </div>
+  <!-- Loader, Paywall, Canvas, Nav… identical to before… -->
 
   <script>
   window.addEventListener('load', () => {
-    // ───── PADDLE OVERLAY SETUP ─────
-    // 1) Paste your full PGP Public Key here:
-    const PADDLE_PUBLIC_KEY = `-----BEGIN PGP PUBLIC KEY BLOCK-----
-MIICIjANBgkqhkiG9w0BAQEFAAOCAg8AMIICCgKCAgEArn0Uok8RFtUjqzvocCkr
-FIsrQ2EQgrH2lo5ZGZF2HqlLSbcyVyjzyhFtmgaqT1obIH7eH93IdibxmYNzynax
-BYeTL4IsSidGGpjepOOMEF7lMIzogK6GTcR7ihqsjdMOobjjXn04K5kv41YaQAfW
-CAcQfjnBBTtRqlYuU4kE3AEy5CbOd+zKcPt20Y+VHOHTmXXrTLyX4Jilw8jwr53f
-Hn06HzrEbh4vDFIJBh26UKfALnpAKXhQUy4wUC6+CvqRq7PqbO40SeYvIJjxXFIv
-KYaFpydd7P1anbz+rXVKjIWQ0EdGOjBOQ/Xy47sAdSe9Sk6Wzp9CT+g/j3ynWcCL
-UHropIFmSDzwHHlIF/lWtzXYZTaTQes4L0rudJ4Q62YWgSEoegdFbEf3ZWN9t87c
-KGjiU7SJo/05XNkKlbxXetAZ6ckALp0Ix3NrO/G4COD9egPeEk94UObUA1JIwpF8
-UiWLEklCNS0iteKPPBZ3fLxVk/voURFDSDsRH86pXKfmxB2VBwAH7TooK5LjQ2bt
-+fwgfm4m8Drr6r4o/t+8LFF3Wue4OewCpyXMjmAnDhZqKb5ZAoL7WxL2VYtxbxRO
-xKSSwnymkl3WrlTBPsMC3Wc4/qf3vLv0zoUpnWZvT0QXjVvMUhqcNUce+LTj+20w
-krI5zTdAwHD0Cpg3OCulwosCAwEAAQ==
------END PGP PUBLIC KEY BLOCK-----`;
+    //
+    // 1) CONFIGURE PADDLE
+    //
+    const PADDLE_TOKEN     = 'test_c1d926aee93e8ff9dbd35392581';   // e.g. 'pub_live_ABC123…' or 'test_ABC123…'
+    const PADDLE_VENDOR_ID =  123456;                    // your numeric Seller/Vendor ID
+    const MONTHLY_ID       = 'pri_01jvthzpme46yzb6g6b7er4jnk';
+    const YEARLY_ID        = 'pri_01jvtj0dch0kb39g9rej1qexyg';
 
-    // 2) Sandbox for local testing; switch to 'production' when you go live
-    Paddle.Environment.set('sandbox');
+    // set sandbox vs production
+    Paddle.Environment.set('sandbox');  // switch to 'production' on go-live
 
-    // 3) Initialize Paddle overlay with your public key
-    Paddle.Setup({
-      publicKey: PADDLE_PUBLIC_KEY,
-      env:       'sandbox'
+    // **only call Initialize** with your token (plus vendor if you want)
+    Paddle.Initialize({
+      token:  PADDLE_TOKEN,
+      vendor: PADDLE_VENDOR_ID
     });
 
-    // 4) Your Price IDs (copy from Paddle Dashboard → Catalog → Products → Prices)
-    const MONTHLY_ID = 'pri_01jvthzpme46yzb6g6b7er4jnk';
-    const YEARLY_ID  = 'pri_01jvtj0dch0kb39g9rej1qexyg';
-
-    // 5) Success callback to unlock pages
     function onSubscribed() {
       localStorage.setItem('subscribed','true');
       document.getElementById('paywall').style.display = 'none';
       queueRenderPage(pageNum);
     }
 
-    // 6) Wire up your Subscribe buttons
-    document.getElementById('monthly-btn').onclick = () => {
+    // wire up the buttons
+    document.getElementById('monthly-btn').onclick = () =>
       Paddle.Checkout.open({
         product:         MONTHLY_ID,
         successCallback: onSubscribed
       });
-    };
-    document.getElementById('yearly-btn').onclick = () => {
+    document.getElementById('yearly-btn').onclick = () =>
       Paddle.Checkout.open({
         product:         YEARLY_ID,
         successCallback: onSubscribed
       });
-    };
-    // ────────────────────────────────────
 
-    // ───── PDF.js + PAYWALL LOGIC ─────
+    //
+    // 2) PDF.js + paywall logic (same as before)
+    //
     pdfjsLib.GlobalWorkerOptions.workerSrc =
       'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js';
 
-    const params = new URLSearchParams(location.search);
-    const bookId = params.get('book') || '1';
-    const pdfUrl = `/ebooks/book-${bookId}.pdf`;
+    const params  = new URLSearchParams(location.search),
+          bookId  = params.get('book') || '1',
+          pdfUrl  = `/ebooks/book-${bookId}.pdf`;
 
-    const loader   = document.getElementById('loader');
-    const paywall  = document.getElementById('paywall');
-    const canvas   = document.getElementById('canvas');
-    const ctx      = canvas.getContext('2d');
-    const prevBtn  = document.getElementById('prev');
-    const nextBtn  = document.getElementById('next');
-    const pageNumEl   = document.getElementById('page-num');
-    const pageCountEl = document.getElementById('page-count');
+    const loader   = document.getElementById('loader'),
+          paywall  = document.getElementById('paywall'),
+          canvas   = document.getElementById('canvas'),
+          ctx      = canvas.getContext('2d'),
+          prevBtn  = document.getElementById('prev'),
+          nextBtn  = document.getElementById('next'),
+          pageNumEl   = document.getElementById('page-num'),
+          pageCountEl = document.getElementById('page-count');
 
-    function showLoader(on) {
-      loader.style.display = on ? 'flex' : 'none';
-    }
+    function showLoader(on) { loader.style.display = on ? 'flex' : 'none'; }
 
-    // 1) HEAD-check & load PDF
     fetch(pdfUrl, { method: 'HEAD' })
-      .then(r => {
-        if (!r.ok) throw new Error(`HTTP ${r.status}`);
-        return pdfjsLib.getDocument(pdfUrl).promise;
-      })
+      .then(r => { if (!r.ok) throw new Error(r.status); return pdfjsLib.getDocument(pdfUrl).promise; })
       .then(pdfDoc => {
         pageCountEl.textContent = pdfDoc.numPages;
         showLoader(false);
         initializeViewer(pdfDoc);
       })
       .catch(err => {
-        console.error('PDF load error:', err);
+        console.error(err);
         showLoader(false);
-        document.body.innerHTML = `<p class="error">
-          Could not load PDF (Book ${bookId}): ${err.message}
-        </p>`;
+        document.body.innerHTML = `<p class="error">Could not load PDF: ${err.message}</p>`;
       });
 
-    // 2) Render + paywall
     let pageNum = 1, pageIsRendering = false, pageNumPending = null;
-
     function initializeViewer(pdfDoc) {
-      function renderPage(num) {
-        if (num > 5 && localStorage.getItem('subscribed') !== 'true') {
+      function renderPage(n) {
+        if (n > 5 && localStorage.getItem('subscribed') !== 'true') {
           paywall.style.display = 'flex';
           return;
         }
         paywall.style.display = 'none';
 
         pageIsRendering = true;
-        pdfDoc.getPage(num).then(page => {
+        pdfDoc.getPage(n).then(page => {
           const vp = page.getViewport({ scale: 1.5 });
-          canvas.height = vp.height;
-          canvas.width  = vp.width;
+          canvas.height = vp.height; canvas.width = vp.width;
           page.render({ canvasContext: ctx, viewport: vp }).promise.then(() => {
             pageIsRendering = false;
             if (pageNumPending !== null) {
@@ -236,31 +191,24 @@ krI5zTdAwHD0Cpg3OCulwosCAwEAAQ==
               pageNumPending = null;
             }
           });
-          pageNumEl.textContent = num;
+          pageNumEl.textContent = n;
         });
       }
 
-      function queueRenderPage(num) {
-        if (pageIsRendering) pageNumPending = num;
-        else renderPage(num);
+      function queueRenderPage(n) {
+        pageIsRendering ? pageNumPending = n : renderPage(n);
       }
 
       prevBtn.onclick = () => {
-        if (pageNum > 1) {
-          pageNum--;
-          queueRenderPage(pageNum);
-        }
+        if (pageNum > 1) { pageNum--; queueRenderPage(pageNum); }
       };
       nextBtn.onclick = () => {
-        if (pageNum < pdfDoc.numPages) {
-          pageNum++;
-          queueRenderPage(pageNum);
-        }
+        if (pageNum < pdfDoc.numPages) { pageNum++; queueRenderPage(pageNum); }
       };
 
       renderPage(pageNum);
     }
-    // ────────────────────────────────────
+    // ───────────────────────────────────────
   });
   </script>
 </body>
