--- a/reader.html
+++ b/reader.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Reader — Classy Femininity</title>
   <style>
-      /* ---------- Base ---------- */
+    /* ---------- Base ---------- */
     * { box-sizing: border-box; margin: 0; padding: 0; }
     html, body { height: 100%; width: 100%; font-family: sans-serif; }
 
@@ -51,73 +52,74 @@
     }
 
     /* PDF canvas */
-    #canvas {
-      display: block;
-      width: 100%;
-    }
+    #canvas { display: block; width: 100%; }
 
     /* Prev/Next nav */
     .nav {
-      position: fixed;
-      bottom: 16px; left: 50%;
+      position: fixed; bottom: 16px; left: 50%;
       transform: translateX(-50%);
       background: rgba(255,255,255,0.9);
       padding: 8px 16px;
       border-radius: 6px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
       z-index: 500;
-      display: flex;
-      align-items: center;
+      display: flex; align-items: center;
     }
     .nav button {
-      margin: 0 8px;
-      padding: 6px 12px;
-      background: #b20235;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
+      margin: 0 8px; padding: 6px 12px;
+      background: #b20235; color: #fff;
+      border: none; border-radius: 4px; cursor: pointer;
     }
     .nav span {
-      font-size: 1rem;
-      margin: 0 4px;
+      font-size: 1rem; margin: 0 4px;
     }
 
     /* Error message */
     .error {
-      padding: 24px;
-      text-align: center;
-      color: red;
-      font-family: sans-serif;
-    }  /* …your existing CSS for loader, paywall, nav… */
+      padding: 24px; text-align: center; color: red;
+    }
   </style>
 
   <!-- PDF.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
-  <!-- Paddle v2 overlay -->
+  <!-- Paddle.js v2 Overlay -->
   <script src="https://cdn.paddle.com/paddle/v2/paddle.js"></script>
 </head>
 <body>
-  <!-- Loader, Paywall, Canvas, Nav… identical to before… -->
+  <!-- Loader -->
+  <div id="loader"><div class="spinner"></div></div>
+
+  <!-- Paywall -->
+  <div id="paywall">
+    <p>You’ve reached your free preview (5 pages).<br/>Subscribe to continue reading.</p>
+    <button id="monthly-btn">Subscribe Monthly</button>
+    <button id="yearly-btn">Subscribe Yearly</button>
+  </div>
+
+  <!-- PDF canvas -->
+  <canvas id="canvas"></canvas>
+
+  <!-- Prev/Next nav -->
+  <div class="nav">
+    <button id="prev">◀ Prev</button>
+    <span id="page-num">1</span> / <span id="page-count">?</span>
+    <button id="next">Next ▶</button>
+  </div>
 
   <script>
   window.addEventListener('load', () => {
     //
-    // 1) CONFIGURE PADDLE
+    // 1) PADDLE.JS INITIALIZATION
     //
-    const PADDLE_TOKEN     = 'test_c1d926aee93e8ff9dbd35392581';   // e.g. 'pub_live_ABC123…' or 'test_ABC123…'
-    const PADDLE_VENDOR_ID =  123456;                    // your numeric Seller/Vendor ID
-    const MONTHLY_ID       = 'pri_01jvthzpme46yzb6g6b7er4jnk';
-    const YEARLY_ID        = 'pri_01jvtj0dch0kb39g9rej1qexyg';
+    Paddle.Environment.set('sandbox');  // or 'production' when you go live
 
-    // set sandbox vs production
-    Paddle.Environment.set('sandbox');  // switch to 'production' on go-live
-
-    // **only call Initialize** with your token (plus vendor if you want)
     Paddle.Initialize({
-      token:  PADDLE_TOKEN,
-      vendor: PADDLE_VENDOR_ID
+      token: 'test_c1d926aee93e8ff9dbd35392581'    // ← replace with your Paddle client-side token (pub_live_… or test_…)
     });
+
+    // Price IDs
+    const MONTHLY_ID = 'pri_01jvthzpme46yzb6g6b7er4jnk';   // ← replace with your monthly Price ID
+    const YEARLY_ID  = 'pri_01jvtj0dch0kb39g9rej1qexyg';  // ← replace with your yearly Price ID
 
     function onSubscribed() {
       localStorage.setItem('subscribed','true');
@@ -125,65 +127,75 @@
       queueRenderPage(pageNum);
     }
 
-    // wire up the buttons
-    document.getElementById('monthly-btn').onclick = () =>
+    document.getElementById('monthly-btn').onclick = () => {
       Paddle.Checkout.open({
         product:         MONTHLY_ID,
         successCallback: onSubscribed
       });
-    document.getElementById('yearly-btn').onclick = () =>
+    };
+    document.getElementById('yearly-btn').onclick = () => {
       Paddle.Checkout.open({
         product:         YEARLY_ID,
         successCallback: onSubscribed
       });
+    };
 
     //
-    // 2) PDF.js + paywall logic (same as before)
+    // 2) PDF.JS + PAYWALL LOGIC
     //
     pdfjsLib.GlobalWorkerOptions.workerSrc =
       'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js';
 
-    const params  = new URLSearchParams(location.search),
-          bookId  = params.get('book') || '1',
-          pdfUrl  = `/ebooks/book-${bookId}.pdf`;
+    const params    = new URLSearchParams(location.search),
+          bookId    = params.get('book') || '1',
+          pdfUrl    = `/ebooks/book-${bookId}.pdf`;
 
-    const loader   = document.getElementById('loader'),
-          paywall  = document.getElementById('paywall'),
-          canvas   = document.getElementById('canvas'),
-          ctx      = canvas.getContext('2d'),
-          prevBtn  = document.getElementById('prev'),
-          nextBtn  = document.getElementById('next'),
+    const loader    = document.getElementById('loader'),
+          paywall   = document.getElementById('paywall'),
+          canvas    = document.getElementById('canvas'),
+          ctx       = canvas.getContext('2d'),
+          prevBtn   = document.getElementById('prev'),
+          nextBtn   = document.getElementById('next'),
           pageNumEl   = document.getElementById('page-num'),
           pageCountEl = document.getElementById('page-count');
 
-    function showLoader(on) { loader.style.display = on ? 'flex' : 'none'; }
+    function showLoader(on) {
+      loader.style.display = on ? 'flex' : 'none';
+    }
 
     fetch(pdfUrl, { method: 'HEAD' })
-      .then(r => { if (!r.ok) throw new Error(r.status); return pdfjsLib.getDocument(pdfUrl).promise; })
+      .then(r => {
+        if (!r.ok) throw new Error(`HTTP ${r.status}`);
+        return pdfjsLib.getDocument(pdfUrl).promise;
+      })
       .then(pdfDoc => {
         pageCountEl.textContent = pdfDoc.numPages;
         showLoader(false);
         initializeViewer(pdfDoc);
       })
       .catch(err => {
-        console.error(err);
+        console.error('PDF load error:', err);
         showLoader(false);
-        document.body.innerHTML = `<p class="error">Could not load PDF: ${err.message}</p>`;
+        document.body.innerHTML = `<p class="error">
+          Could not load PDF (Book ${bookId}): ${err.message}
+        </p>`;
       });
 
     let pageNum = 1, pageIsRendering = false, pageNumPending = null;
+
     function initializeViewer(pdfDoc) {
-      function renderPage(n) {
-        if (n > 5 && localStorage.getItem('subscribed') !== 'true') {
+      function renderPage(num) {
+        if (num > 5 && localStorage.getItem('subscribed') !== 'true') {
           paywall.style.display = 'flex';
           return;
         }
         paywall.style.display = 'none';
 
         pageIsRendering = true;
-        pdfDoc.getPage(n).then(page => {
+        pdfDoc.getPage(num).then(page => {
           const vp = page.getViewport({ scale: 1.5 });
-          canvas.height = vp.height; canvas.width = vp.width;
+          canvas.height = vp.height;
+          canvas.width  = vp.width;
           page.render({ canvasContext: ctx, viewport: vp }).promise.then(() => {
             pageIsRendering = false;
             if (pageNumPending !== null) {
@@ -191,12 +203,13 @@
               pageNumPending = null;
             }
           });
-          pageNumEl.textContent = n;
+          pageNumEl.textContent = num;
         });
       }
 
-      function queueRenderPage(n) {
-        pageIsRendering ? pageNumPending = n : renderPage(n);
+      function queueRenderPage(num) {
+        if (pageIsRendering) pageNumPending = num;
+        else renderPage(num);
       }
 
       prevBtn.onclick = () => {
@@ -208,7 +221,6 @@
 
       renderPage(pageNum);
     }
-    // ───────────────────────────────────────
   });
   </script>
 </body>
